samples/_failures_safe/1761495161_abf9a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee7eedca.c: In function ‘main’:
./samples/SAFE/__tmp_ee7eedca.c:137:58: error: expected ‘)’ at end of input
  137 |     if (scanf("%d", &startVertex) != 1 || startVertex < 0
      |        ~                                                 ^
      |                                                          )
./samples/SAFE/__tmp_ee7eedca.c:137:5: error: expected declaration or statement at end of input
  137 |     if (scanf("%d", &startVertex) != 1 || startVertex < 0
      |     ^~
